# jtsCalibration

./: CMakeLists.txt
app/: CMakeLists.txt  CMakeLists.txt~
app/conf/: default.ini  default.ini~  jtsCalibration.xml  jtsCalibrationVerification.xml  results.ods
app/conf/experiments_data/: script.sce
include/: JTSCalibrationModule.h  JTScalibrationThread.h  modHelp.h
src/: JTSCalibrationModule.cpp  JTSCalibrationModule.cpp~  JTScalibrationThread.cpp  JTScalibrationThread.cpp~  main.cpp  main.cpp~  modHelp.cpp
